# orgasearch

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: search.py  sources.py
app/core/: config.py  country_names.py  http.py  rate_limit.py  sparql.py
app/models/: lookup.py  partner.py  search.py
app/services/: expansion_planner.py  label_resolver.py  orchestrator.py  relevance.py  result_merger.py  search_cache.py
app/sources/: hal.py  openalex.py  protocol.py  registry.py  ror.py  type_mapping.py  wikidata.py
config/: country_languages.json  country_names.json  dedup_rules.yaml  id_expansion.yaml  sources.yaml
docs/: ADDING_SOURCE.md
tests/: conftest.py  test_api.py  test_distinct_results.py  test_expansion.py  test_label_resolver.py  test_lookup.py  test_mapping_hal.py  test_mapping_hal_query.py  test_mapping_openalex.py  test_mapping_ror.py  test_mapping_wikidata.py  test_merger.py  test_registry.py  test_relevance.py  test_search_validation.py  test_sparql.py
tests/fixtures/: hal_sample.json  openalex_sample.json  ror_sample.json  wikidata_entities.json  wikidata_search.json
