[project]
name = "orgasearch"
version = "1.0.0"
description = "Metasearch API for institutional partners (ROR, Wikidata, HAL, OpenAlex)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "cachetools>=5.5.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
redis = ["redis>=5.2.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "external: live API integration tests",
]
